--- a/exercício_css_1/index.html
+++ b/exercício_css_1/index.html
@@ -8,12 +8,14 @@ Uma breve descrição (texto).-->
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Minha Página</title>
-		<link rel="stylesheet", href="style.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-	<h1>Minha Página</h1>
-	<img src="HTML-5-Badge-Logo.png" alt="Logo do HTML5">
-	<p id=usuario>Usuário</p>
-	<p>Um usuário da internet que criou esse site usando html :D</p>
+		<h1>Minha Página</h1>
+		<img src="HTML-5-Logo.png" alt="Logo do HTML5">
+		<p id="usuario">Usuário</p>
+		<p class="primeira-classe">Parágrafo Extra :D</p>
+		<p class="primeira-classe">Mais uma!</p>
+		<p>Um usuário da internet que criou esse site usando html e css :D</p>
 	</body>
 </html>
