Implement media queries

--- a/exercício_html_css_2/index.html
+++ b/exercício_html_css_2/index.html
@@ -13,9 +13,11 @@ A página deve ser responsiva, mudando o layout conforme a largura da tela.-->
 		<h1>Promoção Agora!</h1>
 		<p>Computadores em Promoção por Tempo Limitado!</p>		
 		
-		<img src="computador_1.jpeg" alt="Computador 1 preto com tela transparente rgb dentro">
-		<img src="computador_2.jpg" alt="Computador 2 preto mais fechado com rgb dentro">
-		<img src="computador_3.webp" alt="Computador 3 branco com tela transparente e rgb dentro">
+		<div id=imagens>
+			<img src="computador_1.jpeg" alt="Computador 1 preto com tela transparente rgb dentro">
+			<img src="computador_2.jpg" alt="Computador 2 preto mais fechado com rgb dentro">
+			<img src="computador_3.webp" alt="Computador 3 branco com tela transparente e rgb dentro">
+		</div>
 		<br><button>Comprar Agora</button>
 	</body>
 </html>
